force-app/main/default/objects/z_SchemaTemp__c/z_SchemaTemp__c.object-meta.xml
<CustomObject>
    <description>Created by the Metadata API</description>
    <label>z_SchemaTemp</label>
    <nameField>
        <label>z_SchemaTemp</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>