force-app/main/default/objects/z_SchemaTemp__c/fields/fieldname__c.field-meta.xml
<CustomField>
    <fullName>fieldname__c</fullName>
    <label>fieldname</label>
    <length>100</length>
    <type>Text</type>
</CustomField>