force-app/main/default/objects/z_SchemaTemp__c/fields/objid__c.field-meta.xml
<CustomField>
    <fullName>objid__c</fullName>
    <label>objid</label>
    <length>20</length>
    <type>Text</type>
</CustomField>