force-app/main/default/objects/z_SchemaTemp__c/fields/objname__c.field-meta.xml
<CustomField>
    <fullName>objname__c</fullName>
    <label>objname</label>
    <length>100</length>
    <type>Text</type>
</CustomField>